--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@steveeeie/react-page-transition": "^1.2.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "antd": "^4.9.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "bs-custom-file-input": "^1.3.4",
     "firebase": "^8.0.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-transition-group": "^4.4.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
