--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.2.0",
     "antd": "^4.9.1",
     "axios": "^0.21.0",
+    "blueimp-canvas-to-blob": "^3.28.0",
     "bootstrap": "^4.5.3",
     "bs-custom-file-input": "^1.3.4",
     "firebase": "^8.0.1",
@@ -18,7 +19,9 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-signature-canvas": "^1.0.3",
     "react-transition-group": "^4.4.1",
+    "reactjs-popup": "^2.0.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
